--- a/index.html
+++ b/index.html
@@ -3,67 +3,30 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Best Restaurants in India</title>
+    <link rel="stylesheet" href="styles2.css">
+    <title>Add a restaurant</title>
     <div>
         <nav>
-            <a href="headerNavigationPage\addRestaurants.html"><button>Add Restaurants</button></a>
-            <a href="headerNavigationPage\login.html"><button>Login</button></a>
-            <a href="headerNavigationPage\signUp.html"><button>Sign Up</button></a>
+            <div>
+                <strong> Zomato Logo </strong>
+
+            </div>
+            <div>
+               <button>Advertise</button>
+               <button>Login</button>  
+            </div>    
+            <h1>Partner with Zomato</h1>
+            <h1> at 0% commission for the 1st month!</h1>
+            <p>And get ads worth INR 1500. Valid for new restaurant partners in select cities.</p>       
+            <div>
+                <button>Register your restaurant</button>
+                <button>Login to view your existing restaurants</button>
+            </div>  
+            <small>Need help? Contact <a>+91 111111111</a></small>      
         </nav>
-        <div>
-            <h1><strong>Zomato</strong></h1>
-            <h1>Find the best restaurants,<br> cafés and bars in India</h1>            
-        </div>
     </div>
 </head>
 <body>
-    <main>
-        <div>
-           <div>
-            <h1> Popular locations in India </h1>
-            <span> From swanky upscale restaurants to the cosiest hidden gems serving the most incredible food, Zomato covers it all. Explore menus, and millions of restaurant photos and reviews from users just like you, to find your next great meal. </span>
-           </div>
-           <div>
-               <div>
-                <a href="branch Navigation\Agra Restaurants.html">
-                    <button>Agra restaurant</button>
-                </a>
-                </div>
-                <div>
-                    <a href="branch Navigation\Bengalore Restaurants.html">
-                        <button>Bengalore restaurant</button>
-                    </a>
-                </div>
-                <div>
-                    <a href="branch Navigation\Delhi Restaurants.html">
-                        <button>Delhi restaurant</button>
-                    </a>
-                </div>
-                <div>
-                    <a href="branch Navigation\Goa Restaurants.html">
-                        <button>Goa restaurant</button>
-                    </a>
-                </div>
-                <div>
-                    <a href="branch Navigation\Mumbai Restaurants.html">
-                        <button>Mumbai restaurant</button>
-                    </a>
-                </div>
-                <div>
-                    <a href="branch Navigation\Pune Restaurants.html">
-                        <button>Pune restaurant</button>
-                    </a>
-                </div>
-                <div>
-                    <a href="branch Navigation\Surat Restaurants.html">
-                        <button>Surat restaurant</button>
-                    </a>
-                </div>
-           </div>
-        </div>
-    </main>
+    
 </body>
-<footer>
-    This Site is only created for Practice
-</footer>
 </html>
